# Legal-Advisory-Assistant

./: README.md
Phase-1-Vector-RAG/: .gitignore  README.md  pyproject.toml
Phase-1-Vector-RAG/api/: main.py
Phase-1-Vector-RAG/api/core/: database.py  engine.py  processor.py
Phase-1-Vector-RAG/gui/: app.py
Phase-1-Vector-RAG/gui/templates/: index.html
